--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 #mongodb.host=172.31.16.121
 #mongodb.database.name=kolorbi-staging
 mongodb.host=127.0.0.1
-mongodb.database.name=kolorbi
+mongodb.database.name=scrola
 mongodb.port=27017
 
 amazon.aws.accesskey=AKIAIQ2CKII2RX4KN77Q
