--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ mongodb.host=scrola.otuj3.mongodb.net
 mongodb.database.name=scrola
 mongodb.port=27017
 mongodb.password=gfp4oS9gBGMRUD8h
-mongodb.database.uri=mongodb+srv://Scroladinger:gfp4oS9gBGMRUD8h@scrola.otuj3.mongodb.net/scrola
-#mongodb.database.uri=mongodb://localhost:27017/scrola
+#mongodb.database.uri=mongodb+srv://Scroladinger:gfp4oS9gBGMRUD8h@scrola.otuj3.mongodb.net/scrola
+mongodb.database.uri=mongodb://localhost:27017/scrola
 
 amazon.aws.accesskey=AKIAIQ2CKII2RX4KN77Q
 amazon.aws.secretkey=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
@@ -23,7 +23,7 @@ flutterwave.transfer.create.endpoint=https://ravesandboxapi.flutterwave.com/v2/g
 flutterwave.verify.endpoint=https://ravesandboxapi.flutterwave.com/flwv3-pug/getpaidx/api/v2/verify
 flutterwave.secret.key=FLWSECK-4779bbab4cf08851173619ae43be4a14-X
 
-google.api.key=AIzaSyDKIxqC1jirXGnSBdREB760raTOVGPifvk
+google.api.key=AIzaSyCSZaXNh9u8tM1LOiGhVK-4ocIywZ1joX8
 
 kolorbi.gift.count=5
 kolorbi.raffle.size=10
