--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ mongodb.host=scrola.otuj3.mongodb.net
 mongodb.database.name=scrola
 mongodb.port=27017
 mongodb.password=gfp4oS9gBGMRUD8h
-#mongodb.database.uri=mongodb+srv://Scroladinger:gfp4oS9gBGMRUD8h@scrola.otuj3.mongodb.net/scrola
-mongodb.database.uri=mongodb://localhost:27017/scrola
+mongodb.database.uri=mongodb+srv://Scroladinger:gfp4oS9gBGMRUD8h@scrola.otuj3.mongodb.net/scrola
+#mongodb.database.uri=mongodb://localhost:27017/scrola
 
 amazon.aws.accesskey=AKIAIQ2CKII2RX4KN77Q
 amazon.aws.secretkey=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
